feat(shape): add feature targeting to public mixins (#4384)

--- a/packages/mdc-menu-surface/_mixins.scss
+++ b/packages/mdc-menu-surface/_mixins.scss
@@ -81,11 +81,7 @@
 }
 
 @mixin mdc-menu-surface-shape-radius($radius, $rtl-reflexive: false, $query: mdc-feature-all()) {
-  $feat-structure: mdc-feature-create-target($query, structure);
-
-  @include mdc-feature-targets($feat-structure) {
-    @include mdc-shape-radius($radius, $rtl-reflexive);
-  }
+  @include mdc-shape-radius($radius, $rtl-reflexive, $query: $query);
 }
 
 //
