feat(feature-targeting): Rename main mixins to end with `-core-styles` (#4404)
BREAKING CHANGE: The main mixins recently introduced to some packages in in v0.44.0 have been renamed from `mdc-foo` to `mdc-foo-core-styles`. (Importing baseline styles via `mdc-foo.scss` remains unaffected.)

--- a/packages/mdc-list/_mixins.scss
+++ b/packages/mdc-list/_mixins.scss
@@ -33,7 +33,7 @@
 // Public
 //
 
-@mixin mdc-list($query: mdc-feature-all()) {
+@mixin mdc-list-core-styles($query: mdc-feature-all()) {
   $feat-color: mdc-feature-create-target($query, color);
   $feat-structure: mdc-feature-create-target($query, structure);
   $feat-typography: mdc-feature-create-target($query, typography);
