--- a/packages/mdc-textfield/icon/_mixins.scss
+++ b/packages/mdc-textfield/icon/_mixins.scss
@@ -30,7 +30,7 @@
 
 // Private mixins
 
-@mixin mdc-text-field-icon-horizontal-position_($position-property, $position, $padding) {
+@mixin mdc-text-field-icon-horizontal-position_($position-property, $position, $padding, $input-padding) {
   .mdc-text-field__icon {
     @include mdc-rtl-reflexive-position($position-property, $position);
   }
@@ -38,11 +38,11 @@
   // Move the input's position, to allow room for the icon
   @if ($position-property == left) {
     .mdc-text-field__input {
-      @include mdc-rtl-reflexive-property(padding, $padding /* left-value */, $position  /* right-value */);
+      @include mdc-rtl-reflexive-property(padding, $padding /* left-value */, $input-padding  /* right-value */);
     }
   } @else {
     .mdc-text-field__input {
-      @include mdc-rtl-reflexive-property(padding, $position /* left-value */, $padding  /* right-value */);
+      @include mdc-rtl-reflexive-property(padding, $input-padding /* left-value */, $padding  /* right-value */);
     }
   }
 }
