fix(menu): Use on-surface color for graphic/meta content (#4520)

--- a/packages/mdc-menu/_mixins.scss
+++ b/packages/mdc-menu/_mixins.scss
@@ -35,11 +35,16 @@
 
   // Customize the menu-surface and contained list to match the mdc-menu styles.
   .mdc-menu {
-    @include mdc-list-item-meta-ink-color(text-primary-on-background, $query);
-    @include mdc-list-item-graphic-ink-color(text-primary-on-background, $query);
+    @include mdc-list-item-meta-ink-color($mdc-menu-ink-color, $query);
+    @include mdc-list-item-graphic-ink-color($mdc-menu-ink-color, $query);
 
     @include mdc-feature-targets($feat-structure) {
       min-width: $mdc-menu-min-width;
+    }
+
+    // Include mdc-list selector to ensure list-inside-menu overrides default list styles
+    .mdc-list {
+      @include mdc-list-item-primary-text-ink-color($mdc-menu-ink-color, $query);
     }
 
     .mdc-list-divider {
