--- a/test/scss/_feature-targeting-test.scss
+++ b/test/scss/_feature-targeting-test.scss
@@ -3,6 +3,7 @@
 @import "@material/checkbox/mixins";
 @import "@material/dialog/mixins";
 @import "@material/elevation/mixins";
+@import "@material/fab/mixins";
 @import "@material/form-field/mixins";
 @import "@material/list/mixins";
 @import "@material/menu-surface/mixins";
@@ -61,6 +62,20 @@
     // Elevation
     @include mdc-elevation-core-styles($query: $query);
     @include mdc-elevation(0, $query: $query);
+
+    // FAB
+    @include mdc-fab-core-styles($query: $query);
+    @include mdc-fab-without-ripple($query: $query);
+    @include mdc-fab-ripple($query: $query);
+    @include mdc-fab-accessible(red, $query: $query);
+    @include mdc-fab-container-color(red, $query: $query);
+    @include mdc-fab-icon-size(0, $query: $query);
+    @include mdc-fab-ink-color(red, $query: $query);
+    @include mdc-fab-extended-fluid($query: $query);
+    @include mdc-fab-extended-padding(0, 0, $query: $query);
+    @include mdc-fab-extended-label-padding(0, $query: $query);
+    @include mdc-fab-shape-radius(0, $query: $query);
+    @include mdc-fab-extended-shape-radius(0, $rtl-reflexive: false, $query: $query);
 
     // Form Field
     @include mdc-form-field-core-styles($query: $query);
