feat(image-list): Add feature targeting for styles (#4535)

--- a/test/scss/_feature-targeting-test.scss
+++ b/test/scss/_feature-targeting-test.scss
@@ -5,6 +5,7 @@
 @import "@material/elevation/mixins";
 @import "@material/fab/mixins";
 @import "@material/form-field/mixins";
+@import "@material/image-list/mixins";
 @import "@material/list/mixins";
 @import "@material/menu-surface/mixins";
 @import "@material/menu/mixins";
@@ -79,6 +80,13 @@
 
     // Form Field
     @include mdc-form-field-core-styles($query: $query);
+
+    // Image List
+    @include mdc-image-list-core-styles($query: $query);
+    @include mdc-image-list-aspect(1, $query: $query);
+    @include mdc-image-list-shape-radius(0, $query: $query);
+    @include mdc-image-list-standard-columns(4, 4px, $query: $query);
+    @include mdc-image-list-masonry-columns(4, 4px, $query: $query);
 
     // List
     @include mdc-list-core-styles($query: $query);
