feat(icon-button): Add feature targeting for styles (#4536)

--- a/test/scss/_feature-targeting-test.scss
+++ b/test/scss/_feature-targeting-test.scss
@@ -5,6 +5,7 @@
 @import "@material/elevation/mixins";
 @import "@material/fab/mixins";
 @import "@material/form-field/mixins";
+@import "@material/icon-button/mixins";
 @import "@material/image-list/mixins";
 @import "@material/list/mixins";
 @import "@material/menu-surface/mixins";
@@ -80,6 +81,11 @@
 
     // Form Field
     @include mdc-form-field-core-styles($query: $query);
+
+    // Icon Button
+    @include mdc-icon-button-core-styles($query: $query);
+    @include mdc-icon-button-size(0, $query: $query);
+    @include mdc-icon-button-ink-color(red, $query: $query);
 
     // Image List
     @include mdc-image-list-core-styles($query: $query);
