--- a/test/scss/_feature-targeting-test.scss
+++ b/test/scss/_feature-targeting-test.scss
@@ -5,6 +5,7 @@
 @import "@material/elevation/mixins";
 @import "@material/fab/mixins";
 @import "@material/form-field/mixins";
+@import "@material/grid-list/mixins";
 @import "@material/icon-button/mixins";
 @import "@material/image-list/mixins";
 @import "@material/list/mixins";
@@ -81,6 +82,11 @@
 
     // Form Field
     @include mdc-form-field-core-styles($query: $query);
+
+    // Grid List
+    @include mdc-grid-list-core-styles($query: $query);
+    @include mdc-grid-list-tile-aspect(1, $query: $query);
+    @include mdc-grid-list-tile-gutter(0, $query: $query);
 
     // Icon Button
     @include mdc-icon-button-core-styles($query: $query);
