feat(tab): Improved mixins (#4675)

--- a/packages/mdc-tab/_mixins.scss
+++ b/packages/mdc-tab/_mixins.scss
@@ -25,6 +25,10 @@
 
 // Public mixins
 
+@mixin mdc-tab-horizontal-padding($padding) {
+  padding: 0 $padding;
+}
+
 @mixin mdc-tab-text-label-color($color) {
   .mdc-tab__text-label {
     @include mdc-theme-prop(color, $color);
