fix(tab-indicator): Show border for high contrast (#4666)

--- a/packages/mdc-tab-indicator/_mixins.scss
+++ b/packages/mdc-tab-indicator/_mixins.scss
@@ -29,13 +29,13 @@
 
 @mixin mdc-tab-indicator-underline-color($color) {
   .mdc-tab-indicator__content--underline {
-    @include mdc-theme-prop(background-color, $color);
+    @include mdc-theme-prop(border-color, $color);
   }
 }
 
 @mixin mdc-tab-indicator-underline-height($height) {
   .mdc-tab-indicator__content--underline {
-    height: $height;
+    border-top-width: $height;
   }
 }
 
